kube-system/monitor/es-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    usage: monitor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
        usage: monitor
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:5.6.2
          resources:
            limits:
              memory: 1024Mi
              cpu: 100m
            requests:
              memory: 16Mi
              cpu: 10m
          ports:
            - containerPort: 9200
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data
            - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
              name: config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: elasticsearch
        - name: config
          configMap:
            name: elasticsearch
