kube-system/monitor/graylog-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: graylog
  labels:
    app: graylog
    usage: monitor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: graylog
        usage: monitor
    spec:
      containers:
        - name: graylog
          image: graylog/graylog:2.3.1-2
          resources:
            limits:
              memory: 1024Mi
              cpu: 100m
            requests:
              memory: 16Mi
              cpu: 10m
          ports:
            - containerPort: 9000
              protocol: TCP
              name: web
            - containerPort: 514
              protocol: TCP
              name: syslog
            - containerPort: 12201
              protocol: TCP
              name: gelf
          volumeMounts:
            - mountPath: /usr/share/graylog/data/journal
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: graylog
