kube-system/monitor/jaeger-query-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jaeger-query
  labels:
    app: jaeger
    jaeger-infra: query-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jaeger
        jaeger-infra: query-pod
    spec:
      containers:
        - image: jaegertracing/jaeger-query:0.8
          name: jaeger-query
          ports:
          - containerPort: 16686
            protocol: TCP
          command:
          - "/go/bin/query-linux"
          - "--span-storage.type=elasticsearch"
          - "--es.server-urls=http://elasticsearch:9200"
          - "--es.username=elastic"
          - "--es.password=changeme"
          - "--query.static-files=/go/jaeger-ui/"
          readinessProbe:
            httpGet:
              path: "/"
              port: 16686
      dnsPolicy: ClusterFirst
      restartPolicy: Always
