kube-system/monitor/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    usage: monitor
spec:
  selector:
    app: elasticsearch
    usage: monitor
  ports:
    - name: http
      targetPort: 9200
      port: 9200
      protocol: TCP
    - name: transport
      port: 9300
      targetPort: 9300
      protocol: TCP
