kube-system/monitor/influxdb.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: influxdb
  namespace: kube-system
  labels:
    app: influxdb
    usage: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
      usage: monitor
  template:
    metadata:
      labels:
        app: influxdb
        usage: monitor
    spec:
      containers:
      - name: influxdb
        image: gcr.io/google_containers/heapster-influxdb-amd64:v1.3.3
        volumeMounts:
        - mountPath: /data
          name: influxdb-storage
      volumes:
      - name: influxdb-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitor
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    # kubernetes.io/cluster-service: 'true'
    # kubernetes.io/name: monitoring-influxdb
  name: influxdb
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - port: 8086
    targetPort: 8086
  selector:
    app: influxdb
    usage: monitor
