kube-system/monitor/jaeger-query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  labels:
    app: jaeger
    jaeger-infra: query-service
spec:
  ports:
    - name: jaeger-query
      port: 80
      protocol: TCP
      targetPort: 16686
  selector:
    jaeger-infra: query-pod
  type: ClusterIP
