kube-system/monitor/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: jaeger
    jaeger-infra: zipkin-service
spec:
  ports:
    - name: jaeger-collector-zipkin
      port: 9411
      protocol: TCP
      targetPort: 9411
  selector:
    jaeger-infra: collector-pod
  type: ClusterIP
