kube-system/monitor/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  labels:
    app: grafana
    usage: monitor
spec:
  rules:
    - host: grafana.ysitd.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
